# job-scraper-9000

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Justfile  Procfile  README.md  alembic.ini  docker-compose.yml  project-status.md  pyproject.toml  scrape-it.py
config/: 2026-05-11_search.yml  2026-05-11_search_1.yml  auth.yml  auth.yml.example  company_boards.json  example-search-config.yml  quality_gate.yml  remote_only_linkedin_search.yml  search.yml  search.yml.example  sel_search.yml  test_ashby_and_lever.yml
data/: README.md
db/: schema.sql
diagrams/: README.md  deps_edges.txt  deps_full.dot
docker/: README.md  app.Dockerfile  frontend.Dockerfile  ingest.Dockerfile
frontend/: .env.example  .prettierignore  index.html  package-lock.json  package.json  vitest.config.ts
infra/: README.md  main.bicep  main.bicepparam.example
migrations/: env.py
schemas/: scored_job_schema.json
scripts/: README.md  ai_review_pr.py  backfill_salary.py  calibrate_companies_prefilter.py  compare_evals.py  db_ingest.py  export_eval_corrections.py  export_openapi.py  gen-deps.sh  ingest_run.py  merge_batch_results.py  migrate_policies_to_3way.py  parse_skills_fit_review_md.py  partition_skills_fit_review.py  patch-staticwebapp-config.mjs  poll_eval_batch.py  prepare_batch.py  prepare_skills_fit_seed.py  propose_more_skills_fit.py  propose_skills_fit_seed.py  prototype_companies_embedding_ranker.py  pull_user_configs.py  push_user_config.py  remap_gold_to_4way.py  render_skills_fit_review_md.py  run_eval.py  run_overnight.sh  run_prefilter.py  run_remote_filter.py  run_remote_filter_eval.py  run_skills_fit.py  run_skills_fit_eval.py  sample_for_review.py  score_skills_fit_seed.py  select_skills_fit_review.py  set_pipeline_enabled.py  stage_scored_as_proposed.py  submit_batch.py  submit_eval_batch.py  summarize_pr.py  (+7 more)
specs/: application_activity_tracking.md  auth_phase_10.md  cloud_ingest_blob_workflow.md  companies_embedding_veto.md  company_slug_resolution.md  config-module-plan.md  configs_in_db_design.md  data_flow.md  email_scraper_pipeline.md  eval_correction_workflow.md  eval_framework_requirements.md  eval_impl_status.md  eval_tooling_improvements.md  fix_sel.md  front-end.md  grab_bag_workflow.md  ingestion-expansion.md  local_filter_design.md  multi_user_design.md  multi_user_pipeline_orchestration.md  overnight_batch_parallel_scoring.md  phase4_streamlit_viewer.md  phase9_deployment.md  prefilter_design.md  prefilter_implementation_plan.md  project.md  project_impl_status.md  relocation_policy.md  remote_filter_classifier_tuning.md  remote_filter_eval_decoupling.md  remote_filter_eval_tuning.md  remote_filter_golden_dataset_requirements.md  remote_filter_input_sufficiency.md  remote_filter_model_bakeoff.md  remote_filter_simplification.md  remote_filter_taxonomy.md  runner_concurrency.md  scrape_quality_regression.md  scraper_output_contract.md  sel-scraper.md  (+5 more)
tests/: test_batch_api.py  test_calibrate_companies_prefilter.py  test_cli.py  test_companies_embedding_ranker.py  test_company_boards.py  test_compare_evals.py  test_config.py  test_discover.py  test_eval_batch.py  test_export_eval_corrections.py  test_ingest_run.py  test_pii.py  test_query.py  test_remap_gold_to_4way.py  test_run_remote_filter_eval.py  test_run_skills_fit.py  test_salary.py  (+5 more)
(+453 files in other folders)
