[project]
name = "job-scraper-9000"
version = "0.1.0"
description = "Job scraper for LinkedIn and other sources"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openai>=2.36.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "python-jobspy>=1.1.82",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]

[project.scripts]
job-scraper = "job_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/job_scraper",
    "src/prefilter",
    "src/agents",
    "src/agent_eval",
    "src/ci",
    "src/review_ui",
    "src/utils",
]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "prompts"

[tool.hatch.build.targets.sdist.force-include]
"prompts" = "prompts"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.389",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = [".venv", "data", "dist", "build", "scripts", "tests"]
