[project]
name = "job-scraper-9000"
version = "0.1.0"
description = "Job scraper for LinkedIn and other sources"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "openai>=2.36.0",
    "pandas>=2.3.3",
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "python-jobspy>=1.1.82",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "alembic>=1.16.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
job-scraper-9000 = "jobs_cli.main:main"
job-scraper = "jobs_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/jobs_cli",
    "src/job_scraper",
    "src/prefilter",
    "src/agents",
    "src/agent_eval",
    "src/api",
    "src/ci",
    "src/review_ui",
    "src/utils",
]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "prompts"

[tool.hatch.build.targets.sdist.force-include]
"prompts" = "prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
exclude = [".venv", "data", "dist", "build", "scripts", "tests"]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "httpx>=0.28",
    "pre-commit>=4.0.0",
    "pydeps>=3.0.6",
    "pyright>=1.1.389",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11.0",
]
